# tmech

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.ef115d6  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md  paper.bib  paper.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  cmake-multi-platform.yml  draft-pdf.yml
benchmark/: CMakeLists.txt  main.cpp
benchmark_tree_nodes/: CMakeLists.txt  REPORT.md  bench_kernels.h  bench_scalar.cpp  bench_xsimd_nounroll.cpp  bench_xsimd_unroll.cpp  plot_report.py  scalar.json  xsimd_nounroll.json  xsimd_unroll.json
build-tests-Desktop_Qt_6_1_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  qtcsettings.cmake
docs/: Doxyfile.in  environment.yaml  make.bat  requirements.txt
docs/source/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
docs/source/api/: adaptor.rst  api_symdiff.rst  api_tensor.rst  api_tmech.rst  changelog.rst  compare_operators.rst  comparison.rst  convert_to_voigt.rst  design.rst  expression.rst  getting_started.rst  install.rst  isotropic_functions.rst  numerical_diff.rst  polar_decomposition.rst  scalar_newton.rst  symbolic_differentiation.rst  tensor_as_array.rst  tensor_base.rst  tensor_functions.rst  zrefs.rst
docs/sphinx/: Doxyfile.in  conf.py  environment.yaml  environment.yml  index.rst
docs/sphinx/api/: api_tensor.rst  compare_operators.rst  convert_to_voigt.rst  junk.rst  polar_decomposition.rst  refs.bib  tensor_as_array.rst  zrefs.rst
docs/sphinx/source/: .readthedocs.yaml  conf.py
examples/: CMakeLists.txt  README.md
examples/adaptor/: CMakeLists.txt
examples/adaptor/abaqus/: CMakeLists.txt  README.txt  abaqus_explicit_3D.cpp  abaqus_standard_3D.cpp
examples/adaptor/build-full-Desktop_Qt_6_5_1_GCC_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
examples/adaptor/full/: CMakeLists.txt  full_2D.cpp  full_3D.cpp
examples/adaptor/voigt/: CMakeLists.txt  voigt_2D.cpp  voigt_3D.cpp
examples/base_rearrangement/: CMakeLists.txt
examples/base_rearrangement/fourth_order_tensors/: CMakeLists.txt  basis_change.cpp  transposition.cpp
examples/base_rearrangement/second_order_tensors/: CMakeLists.txt  transposition.cpp
examples/contractions/: CMakeLists.txt  double_contraction.cpp  general_inner_contraction.cpp  single_contraction.cpp
examples/eigenvalues/: CMakeLists.txt  eigenvalues1.cpp  eigenvalues2.cpp  eigenvalues_inv_eigenbasis.cpp  eigenvalues_inv_eigenvectors.cpp  eigenvalues_non_repeated.cpp
examples/j2_plasticity/: CMakeLists.txt  main.cpp
examples/paper2022/build-elasticity-Desktop_Qt_6_1_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  elasticity
examples/paper2022/build-elasticity-Desktop_Qt_6_1_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-311b2cab605ae4b7770e.json  codemodel-v2-4e7d993765ecc22dbfe3.json  index-2022-05-12T15-13-51-0323.json  target-elasticity-Debug-38a7416a667cf73e1297.json
examples/paper2022/build-elasticity-Desktop_Qt_6_1_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-782fee1bcf95dbc0cb19.json  cmakeFiles-v1-6153dc13a347d1bf26e8.json  codemodel-v2-a3ae7cffbbd97251a97a.json  index-2022-05-12T15-13-40-0473.json  target-elasticity-Debug-a44d27bc953f1929b368.json
examples/paper2022/elasticity/: CMakeLists.txt  main.cpp
examples/polar_decomposition/: CMakeLists.txt  main.cpp
examples/svd/: CMakeLists.txt  main.cpp
examples/symdiff/: CMakeLists.txt
examples/symdiff/derivative_basics/: CMakeLists.txt  main.cpp
examples/symdiff/linear_elasticity/: CMakeLists.txt  main.cpp
examples/symdiff/system_nonlinear_equations/: CMakeLists.txt  main.cpp
examples/system_nonlinear_equations/: CMakeLists.txt  main.cpp
examples/tensor_inverse/: CMakeLists.txt  inverse.cpp
examples/tensor_products/: CMakeLists.txt  tensor_products.cpp
include/tmech/: tmech.h  tmech_config.h  tmech_forward_definitions.h
include/tmech/symdiff/: binary_expression_wrapper_bones.h  binary_expression_wrapper_meat.h  constant_bones.h  constant_meat.h  derivative_wrapper_bones.h  derivative_wrapper_meat.h  forward_definitions.h  function_wrapper.h  function_wrapper_bones.h  function_wrapper_meat.h  implicit_function_bones.h  implicit_nonlinear_function_bones.h  jacobi_matrix_wrapper.h  negative_bones.h  negative_meat.h  newton_raphson_solver_bones.h  newton_solver_multi_variable_bones.h  newton_solver_single_variable_bones.h  real_constant_bones.h  real_constant_meat.h  scalar_one_bones.h  scalar_one_meat.h  scalar_zero_bones.h  scalar_zero_meat.h  squeezer.h  std_functions_implementation.h  std_functions_wrapper_bones.h  symdiff_functions_forward.h  symdiff_functions_implementation.h  symdiff_operators.h  symdiff_type_traits.h  symdiff_utility.h  tensor_as_sym_wrapper_bones.h  tensor_as_sym_wrapper_meat.h  tensor_basis_change_wrapper_bones.h  tensor_basis_change_wrapper_meat.h  tensor_dev_wrapper_bones.h  tensor_dev_wrapper_meat.h  tensor_fourth_order_identity_wrapper_bones.h  tensor_fourth_order_identity_wrapper_meat.h  (+32 more)
include/tmech/tensor/: abs_tensor_wrapper_bones.h  abs_tensor_wrapper_meat.h  adaptor_wrapper_bones.h  adaptor_wrapper_meat.h  adjoint_wrapper_bones.h  adjoint_wrapper_meat.h  basis_change_wrapper_bones.h  basis_change_wrapper_meat.h  cofactor_wrapper_bones.h  cofactor_wrapper_meat.h  compare_almost_equal.h  compare_lambda.h  convert_tensor_to_voigt.h  (+110 more)
paper/: paper.bib  paper.md
paper2022/: TensileSpecimen.pdf_tex  junk.md  paper.bib  paper.jats  paper.md
presentations/2022/: tmech.aux  tmech.nav  tmech.out  tmech.tex  tmech.toc
scripts/: make_paper_figure.py  run_bench_report.py  run_benchmarks.py  script.py
tests/: CMakeLists.txt  main.cpp  tmech_test.h  tmech_test.h.autosave
tests/symdiff/: CMakeLists.txt  main.cpp  symdiff_test.h
tests/tmech/: CMakeLists (copy).txt  CMakeLists.txt  tmech_test.h
(+2920 files in other folders)
